src/test/ui/span/issue-25199.stderr
error[E0597]: `container` does not live long enough
  --> $DIR/issue-25199.rs:80:28
   |
80 |     let test = Test{test: &container};
   |                            ^^^^^^^^^ borrowed value does not live long enough
...
85 | }
   | - `container` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `container` does not live long enough
  --> $DIR/issue-25199.rs:83:5
   |
83 |     container.store(test);
   |     ^^^^^^^^^ borrowed value does not live long enough
84 |     //~^ ERROR `container` does not live long enough
85 | }
   | - `container` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

